# ITMO

./: .gitmodules  README.md
semester_3/: README.md
semester_4/fundamentals_of_software_engineering/lab3/: .pdm-python  docker-compose.yaml  pyproject.toml
semester_4/fundamentals_of_software_engineering/lab3/tests/: conftest.py
semester_4/fundamentals_of_software_engineering/lab3/tests/constants/: __init__.py
semester_4/fundamentals_of_software_engineering/lab3/tests/fixtures/: go_to_login_page.py  go_to_points_page.py  go_to_register_page.py
semester_4/fundamentals_of_software_engineering/lab3/tests/modules/login_module/: test_login_suite_from_1_to_3.py
semester_4/fundamentals_of_software_engineering/lab3/tests/modules/points_module/: test_points_suite_1.py
semester_4/fundamentals_of_software_engineering/lab3/tests/modules/registartion_module/: test_registration_suite_1.py  test_registration_suite_2_and_3.py  test_registration_suite_4.py
semester_4/fundamentals_of_software_engineering/lab3/tests/pages/: __init__.py  base_page.py  login_page.py  points_page.py  register_page.py
semester_4/fundamentals_of_software_engineering/lab3/tests/report/: suites.xlsx
semester_4/fundamentals_of_software_engineering/lab3/tests/utils/: generate.py
semester_4/fundamentals_of_software_engineering/lab3/web4/backend/: Dockerfile  launch.bat  settings.gradle
semester_4/fundamentals_of_software_engineering/lab3/web4/backend/app/: build.gradle
semester_4/fundamentals_of_software_engineering/lab3/web4/frontend/: Dockerfile  launch.bat  package-lock.json  package.json
(+1252 files in other folders)
