[project]
name = "test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tenolly", email = "np50022005@yandex.ru"},
]
dependencies = ["pytest>=8.3.5", "selenium>=4.31.0", "pytest-env>=1.1.5", "webdriver-manager>=4.0.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
